--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "cs2600-bot",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voidstarr/cs2600-bot.git"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +13,7 @@
   "author": "Patrick Jacobs",
   "license": "ISC",
   "dependencies": {
-    "auto-gershed": "github:voidstarr/auto-gersh#feature-modularize",
+    "auto-gershed": "github:voidstarr/auto-gersh",
     "cron": "^1.8.2",
     "discord.js": "^12.3.1"
   },
